add_subdirectory(IniSegAlg)
add_subdirectory(MVAAlg)
add_subdirectory(FDSensOptData)
add_subdirectory(NeutrinoEnergyRecoAlg)

cet_build_plugin(NueAna   art::module
                        lardataalg::DetectorInfo
                        lardataobj::RawData
                        lardataobj::RecoBase
                        lardata::ArtDataHelper
                        larreco::Calorimetry
                        larreco::RecoAlg_PMAlg
                        IniSegAlg
                        larcorealg::Geometry
                        larcore::Geometry_Geometry_service
                        lardata::Utilities
                        larsim::Simulation 
                        nug4::ParticleNavigation 
                        lardataobj::Simulation
                        larsim::MCCheater_BackTrackerService_service
                        larsim::MCCheater_ParticleInventoryService_service
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
                        ROOT::Core
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities 
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        cetlib::cetlib 
                        cetlib_except::cetlib_except
                        ROOT_BASIC_LIB_LIST
              BASENAME_ONLY
)

cet_build_plugin(MVASelect   art::module
                        MVAAlg
                        nugen::NuReweight
                        nugen::NuReweight_art
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
                        ROOT::Core
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities 
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        cetlib::cetlib cetlib_except
                        ROOT_BASIC_LIB_LIST
                        ${GENIE_LIB_LIST}
              BASENAME_ONLY
)

cet_build_plugin(IniSegReco art::module
                      lardataalg::DetectorInfo
                      lardataobj::RawData
                      lardataobj::RecoBase
                      larreco::RecoAlg
                      larreco::RecoAlg_PMAlg
                      IniSegAlg
                      larcorealg::Geometry
                      larcore::Geometry_Geometry_service
                      lardata::Utilities
                      larsim::Simulation 
                      nug4::ParticleNavigation 
                      lardataobj::Simulation
                      larsim::MCCheater_BackTrackerService_service
                      larsim::MCCheater_ParticleInventoryService_service
                      nusimdata::SimulationBase
                      art::Framework_Core
                      art::Framework_Principal
                      art::Framework_Services_Registry
                      art_root_io::tfile_support
                      art_root_io::TFileService_service
                      ROOT::Core
                      art::Persistency_Common
                      art::Persistency_Provenance
                      art::Utilities 
                      canvas::canvas
                      messagefacility::MF_MessageLogger
                      cetlib::cetlib 
                      cetlib_except::cetlib_except
                      ROOT_BASIC_LIB_LIST
              BASENAME_ONLY
)

cet_build_plugin(ShSeg   art::module
                        lardataalg::DetectorInfo
                        lardataobj::RawData
                        lardataobj::RecoBase
                        larreco::RecoAlg
                        larreco::Calorimetry
                        larreco::RecoAlg_PMAlg
                        IniSegAlg
                        larcorealg::Geometry
                        larcore::Geometry_Geometry_service
                        lardata::Utilities
                        larsim::Simulation 
                        nug4::ParticleNavigation 
                        lardataobj::Simulation
                        larsim::MCCheater_BackTrackerService_service
                        larsim::MCCheater_ParticleInventoryService_service
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
                        ROOT::Core
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities 
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        cetlib::cetlib 
                        cetlib_except::cetlib_except
                        ROOT_BASIC_LIB_LIST
                        BASENAME_ONLY
)

cet_build_plugin(EnergyReco   art::module
                        MVAAlg
                        NeutrinoEnergyRecoAlg
                        nugen::NuReweight
                        nugen::NuReweight_art
                        nusimdata::SimulationBase
                        larcore::Geometry_Geometry_service
                        larreco::Calorimetry
                        larreco::RecoAlg
                        lardataalg::DetectorInfo
                        lardataobj::RecoBase
                        larsim::MCCheater_BackTrackerService_service
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
                        ROOT::Core
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities 
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        CETLIB
                        ROOT_BASIC_LIB_LIST
                         ${GENIE_LIB_LIST}
              BASENAME_ONLY
)

cet_build_plugin(CheckRecoEnergy   art::module
                        nugen::NuReweight
                        nugen::NuReweight_art
                        nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
                        ROOT::Core
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities 
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        cetlib::cetlib 
                        cetlib_except::cetlib_except
                        ROOT_BASIC_LIB_LIST
                        ${GENIE_LIB_LIST}
              BASENAME_ONLY
)

install_headers()
install_fhicl()
install_source()
install_scripts()
